# rust-examples

./: .gitignore  Cargo.toml  Dockerfile  README.md  justfile
client/: Cargo.toml
client/src/: main.rs
relay/: Cargo.toml
relay/src/: main.rs
src/: blocking_client.rs  buffer.rs  client.rs  connection.rs  db.rs  frame.rs  lib.rs  main.rs  mini_tokio.rs  parse.rs  participant.rs  room.rs  rooms_registry.rs  server.rs  shutdown.rs  ws.rs
src/cmd/: get.rs  mod.rs  ping.rs  publish.rs  set.rs  subscribe.rs  unknown.rs
src/participant/: messages.rs
tests/: client.rs  server.rs
web/: package-lock.json
web/src/: index.ts
