[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3"
atoi = "1"
bytes = "1"
clap = { version = "3.2", features = ["derive"] }
opentelemetry = { version = "0.17", optional = true }
opentelemetry-aws = { version = "0.5", optional = true }
opentelemetry-otlp = { version = "0.10", optional = true }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = { version = "0.17", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[features]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-aws", "dep:opentelemetry-otlp"]
